# husky

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  CREDITS  CREDITS.md  LICENSE  README.md  dep-config.cmake  doxygen.config  exec.sh
base/: CMakeLists.txt  assert.cpp  assert.hpp  concurrent_channel_store.hpp  concurrent_queue.hpp  concurrent_queue_unittest.cpp  counter_barrier.cpp  counter_barrier.hpp  counter_barrier_unittest.cpp  disk_store.cpp  disk_store.hpp  disk_store_unittest.cpp  exception.hpp  generation_lock.cpp  generation_lock.hpp  generation_lock_unittest.cpp  hash.cpp  hash.hpp  hash_unittest.cpp  log.cpp  log.hpp  macros.hpp  serialization.cpp  serialization.hpp  serialization_unittest.cpp  session_local.cpp  session_local.hpp  session_local_unittest.cpp  thread_support.cpp  thread_support.hpp  time.hpp
benchmarks/: CMakeLists.txt  pagerank.cpp
cmake/: dep.cmake  external.cmake  utils.cmake
cmake/modules/: glog.cmake  gtest.cmake  zeromq.cmake
core/: CMakeLists.txt  accessor.cpp  accessor.hpp  accessor_factory.cpp  accessor_factory.hpp  accessor_store.cpp  accessor_store.hpp  accessor_unittest.cpp  attrlist.hpp  attrlist_unittest.cpp  balance.cpp  balance.hpp  combiner.cpp  combiner.hpp  config.cpp  config.hpp  config_unittest.cpp  constants.hpp  context.cpp  context.hpp  coordinator.cpp  coordinator.hpp  engine.hpp  executor.hpp  hash_ring.cpp  hash_ring.hpp  hash_ring_unittest.cpp  job_runner.cpp  job_runner.hpp  mailbox.cpp  mailbox.hpp  mailbox_unittest.cpp  memory_checker.cpp  memory_checker.hpp  memory_checker_unittest.cpp  network.cpp  network.hpp  objlist.cpp  objlist.hpp  objlist_data.hpp  (+23 more)
core/channel/: CMakeLists.txt  aggregator_channel.cpp  aggregator_channel.hpp  aggregator_channel_unittest.cpp  async_migrate_channel.hpp  async_migrate_channel_unittest.cpp  async_push_channel.hpp  async_push_channel_unittest.cpp  broadcast_channel.hpp  broadcast_channel_unittest.cpp  channel_base.cpp  channel_base.hpp  channel_destination.cpp  channel_destination.hpp  channel_factory.hpp  channel_factory_base.cpp  channel_factory_base.hpp  channel_factory_base_unittest.cpp  channel_impl.hpp  channel_manager.hpp  channel_source.cpp  channel_source.hpp  channel_store.hpp  channel_store_base.cpp  channel_store_base.hpp  channel_store_base_unittest.cpp  migrate_channel.hpp  migrate_channel_unittest.cpp  push_channel.hpp  push_channel_unittest.cpp  push_combined_channel.hpp  push_combined_channel_unittest.cpp
examples/: CMakeLists.txt  affinity.cpp  aggregator.cpp  connected_components.cpp  cube.cpp  labeled_point.cpp  linear_regression.cpp  logistic_regression.cpp  nn_mnist.cpp  pagerank.cpp  pi.cpp  pic.cpp  pr_cc_attrlist.cpp  svm.cpp  test_pi.cpp  tfidf.cpp  triangle_counting.cpp  vector.cpp  wc_mr.cpp  wc_mr_elasticsearch.cpp  wc_mr_flume.cpp  wc_mr_mongo.cpp  wc_mr_orc.cpp
io/: CMakeLists.txt  hdfs_manager.cpp  hdfs_manager.hpp
io/input/: CMakeLists.txt  binary_inputformat.cpp  binary_inputformat.hpp  binary_inputformat_impl.cpp  binary_inputformat_impl.hpp  chunk_inputformat.cpp  chunk_inputformat.hpp  elasticsearch_inputformat.cpp  elasticsearch_inputformat.hpp  file_inputformat_impl.hpp  file_splitter_base.hpp  flume_inputformat.cpp  flume_inputformat.hpp  hdfs_binary_inputformat.cpp  hdfs_binary_inputformat.hpp  hdfs_file_splitter.cpp  hdfs_file_splitter.hpp  hdfs_line_inputformat.cpp  hdfs_line_inputformat.hpp  inputformat_base.hpp  inputformat_factory.cpp  inputformat_factory.hpp  inputformat_factory_unittest.cpp  inputformat_helper.cpp  inputformat_helper.hpp  inputformat_store.cpp  inputformat_store.hpp  inputformat_store_unittest.cpp  line_inputformat.cpp  line_inputformat.hpp  mongodb_inputformat.cpp  mongodb_inputformat.hpp  mongodb_split.cpp  mongodb_split.hpp  nfs_binary_inputformat.cpp  nfs_binary_inputformat.hpp  nfs_file_splitter.cpp  nfs_file_splitter.hpp  nfs_line_inputformat.cpp  nfs_line_inputformat.hpp  (+9 more)
io/input/elasticsearch_connector/: http.cpp  http.h
io/input/flume_connector/: CMakeLists.txt  README.md  ThriftSourceProtocol.cpp  ThriftSourceProtocol.h  flume_constants.cpp  flume_constants.h  flume_types.cpp  flume_types.h
io/output/: CMakeLists.txt  elasticsearch_outputformat.cpp  elasticsearch_outputformat.hpp  mongodb_outputformat.cpp  mongodb_outputformat.hpp  outputformat_base.cpp  outputformat_base.hpp
lib/: CMakeLists.txt  aggregator.cpp  aggregator.hpp  aggregator_factory.cpp  aggregator_factory.hpp  aggregator_obj.cpp  aggregator_obj.hpp  aggregator_object.cpp  aggregator_object.hpp  aggregator_object_unittest.cpp  aggregator_unittest.cpp  eigen_matrix_base_plugin.hpp  vector.hpp  vector.tpp
lib/ml/: CMakeLists.txt  data_loader.hpp  feature_label.hpp  fgd.hpp  gradient_descent.hpp  linear_regression.hpp  logistic_regression.hpp  parameter.hpp  regression.hpp  scaler.hpp  sgd.hpp  vector_linalg.cpp  vector_linalg.hpp
master/: CMakeLists.txt  assigners.cpp  assigners.hpp  elasticsearch_assigner.cpp  elasticsearch_assigner.hpp  hdfs_assigner.cpp  hdfs_assigner.hpp  hdfs_binary_assigner.cpp  hdfs_binary_assigner.hpp  master.cpp  master.hpp  master_main.cpp  mongodb_assigner.cpp  mongodb_assigner.hpp  nfs_assigner.cpp  nfs_assigner.hpp  nfs_binary_assigner.cpp  nfs_binary_assigner.hpp  orc_assigner.cpp  orc_assigner.hpp  progress_tracker.cpp  progress_tracker.hpp
scripts/: Dockerfile  build_standalone  check-clang-format.sh  clang-format.py  clang-format.sh  doxygen.py  exec.sh  lint.py  mpi-exec.sh
test/: CMakeLists.txt  test-async.cpp  test-binary-inputformat.cpp  test-hdfs_file_inputformat.cpp  test-log-msg.cpp  test-memory-checker.cpp  test-mongo-to-es.cpp  test-mongodb-outputformat.cpp  test-nfs_file_inputformat.cpp  unittest_main.cpp
